--- a/Contact.html
+++ b/Contact.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="game.css">
      <!-- Bootstrap 3.3.7 -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- Font Awesome -->
@@ -77,6 +78,10 @@ folder instead of downloading all of them to reduce the load. -->
                     <span><li><a href="Contact.html">Contact</a></span>
                     </span>
                   </a>
+                  <a href="#">
+                    <span ><li><a href="Game.html">Game🎲</a></span >
+                      </span>
+                    </a>
                     <!-- <ul class="treeview-menu">
                     <li><a href="../../index.html"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
                     <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
