--- a/Game.html
+++ b/Game.html
@@ -326,13 +326,13 @@ folder instead of downloading all of them to reduce the load. -->
 </script> 
         <div class="container">
             <h1 id = "ccc">🎲Number Guessing game🎲</h1>
-            <pp id="ddd">🎲We have selected a random number between 1 and 100.See if you can guess it in 10 terns or less.🎲<br>🎲🎲🎲We'll tell you if your guess was too high or too low.🎲🎲🎲<br><br></pp>
+            <p5 id="ddd">🎲We have selected a random number between 1 and 100.See if you can guess it in 10 terns or less.🎲<br>🎲🎲🎲We'll tell you if your guess was too high or too low.🎲🎲🎲<br><br></p5>
           </div>
 
           <input type="text" name="txtNumberA" value="" placeholder="Enter a guess" >
-          <pp>Count : <q>10</q>  : <r id=dplay ></r></pp>
-           <pp><input type="button" name="btnSum" value="Submit guess" OnClick="fncA();"></pp>
-            <pp><input1 type="button" name="btnReset" value="Play again" OnClick= "Refresh();"></pp>
+          <p5>Count : <q>10</q>  : <r id=dplay ></r></p5>
+           <p5><input type="button" name="btnSum" value="Submit guess" OnClick="fncA();"></p5>
+            <p5><input type="button" name="btnReset" value="Play again" OnClick= "Refresh();"></p5>
                 <h2>Previous guesses </h2><br>
 
             <a id="aaa"> </a>  
