--- a/Game.html
+++ b/Game.html
@@ -254,7 +254,7 @@ folder instead of downloading all of them to reduce the load. -->
           <!-- Content Header (Page header) -->
           <section class="content-header">
             <h1  align="center">
-              <h3 style="font-size: 50px">GALERY</h3> 
+              <h3 style="font-size: 50px">Game🎲</h3> 
             </h1>
           </section>
       
