--- a/Contact.html
+++ b/Contact.html
@@ -329,14 +329,24 @@ folder instead of downloading all of them to reduce the load. -->
                                     <div class="form-group">
                                       <label for="">Enter Lastname</label>
                                       <input type="text" id="lastname" class="form-control" placeholder="Lastname...">
+
                                   </div>
+                                  <div class="form-group">
+                                    <label for="">Gender</label>
+                                    <select id="gender" class="form-control" id="" placeholder="Choose yours gender...">
+                                        <option value="" >Choose yours gender</option>
+                                        <option value="1" >Male</option>
+                                        <option value="2" >Female</option>
+                                        <option value="3" >Other</option>
+                                    </select>
+                                </div>
                                   <div class="form-group">
                                     <label for="">Enter Email</label>
                                     <input type="text" id="email" class="form-control" placeholder="Email...">
                                 </div>
                                 <div class="form-group">
                                   <label for="">EnteSubjr Massage</label>
-                                  <input type="text" id="massage" class="form-control" placeholder="Massage...">
+                                  <input type="text" id="massage" class="form-control" placeholder="Massage..." style="height: 100px;">
                               </div>
                                     
                                 </form>
@@ -355,6 +365,7 @@ folder instead of downloading all of them to reduce the load. -->
                                         <tr>
                                             <th>Firstname</th>
                                             <th>Lastname</th>
+                                            <th>Gender</th>
                                             <th>Email</th>
                                             <th>Massage</th>
                                         </tr>
@@ -365,6 +376,8 @@ folder instead of downloading all of them to reduce the load. -->
                                 </table>
                                 <table class="table footer"></table>
                                 <h4></h4>
+                                <h5></h5>
+                                <h6></h6>
                             </div>
                         </div>
                     </div>
